Some typo fixes Remove some older translation keys with incorrect/not up to date english translations so crowdin don't thinks that these are actual translations

--- a/src/main/resources/assets/advancedperipherals/lang/pt_pt.json
+++ b/src/main/resources/assets/advancedperipherals/lang/pt_pt.json
@@ -5,10 +5,6 @@
   "advancements.advancedperipherals.weak_automata_core.description": "A vida após a morte existe em Minecraft?",
   "advancements.advancedperipherals.end_automata_core": "Núcleo de autómato do end",
   "advancements.advancedperipherals.end_automata_core.description": "Se conseguir programar uma posição de localização GPS-free, você ganha",
-  "advancements.advancedperipherals.husbandry_automata_core": "Husbandry automata core",
-  "advancements.advancedperipherals.overpowered_automata_core": "Overpowered automata core",
-  "advancements.advancedperipherals.overpowered_automata_core.description": "Can you handle so much power?",
-  "advancements.advancedperipherals.base_toolkit": "Gentleman's set!",
   "advancements.advancedperipherals.nbt_toolkit": "PODER ILIMITADO!!!",
   "advancements.advancedperipherals.sense_toolkit": "A verdade não pode se esconder para sempre",
   "advancements.advancedperipherals.sense_toolkit.description": "Apanhe um digitalizador geográfico e detetor ambiental. Não há limites para a observabilidade!",
@@ -20,55 +16,6 @@
   "item.advancedperipherals.end_automata_core": "Núcleo de autómato do end",
   "item.advancedperipherals.overpowered_end_automata_core": "Núcleo de automato fraco super-potenciado",
   "item.advancedperipherals.tooltip.computer_tool": "§7Você pode acessar uma ‘interface’ gráfica dos nossos blocos com esta ferramenta mágica. Mas, por enquanto, é inútil.",
-  "item.advancedperipherals.tooltip.show_desc": "§b[§7%s§b] §7Para Descrição",
   "item.advancedperipherals.tooltip.disabled": "§cEste item está desativado nas configurações, pode criá-lo, mas a lógica periférica não funcionará",
-  "item.advancedperipherals.tooltip.energy_detector": "§7Pode detetar o fluxo de energia e atuar como resistência.",
-  "item.advancedperipherals.tooltip.environment_detector": "§7Can be used to interact with the World.",
-  "item.advancedperipherals.tooltip.player_detector": "§7Can be used to interact with Players.",
-  "item.advancedperipherals.tooltip.rs_bridge": "§7Can be used to interact with Refined Storage.",
-  "item.advancedperipherals.tooltip.me_bridge": "§7Can be used to interact with Applied Energistics 2.",
-  "item.advancedperipherals.tooltip.chat_box": "§7Can be used to read and write messages to the ingame chat.",
-  "item.advancedperipherals.tooltip.peripheral_casing": "§7An empty hull without the love it deserves.",
-  "item.advancedperipherals.tooltip.memory_card.bound": "Bound to %s.",
-  "item.advancedperipherals.tooltip.block_reader": "§7This block is able to read data of blocks and tile entities in front of it",
-  "item.advancedperipherals.tooltip.geo_scanner": "§7This block is able to scan the area around it",
-  "item.advancedperipherals.tooltip.colony_integrator": "§7This block is able to interact with mine colonies",
-  "item.advancedperipherals.tooltip.nbt_storage": "§7This block is able to store some nbt data",
-  "item.advancedperipherals.tooltip.weak_automata_core": "§7Upgrade for turtle, that makes the turtle useful again",
-  "block.advancedperipherals.environment_detector": "Environment Detector",
-  "block.advancedperipherals.player_detector": "Player Detector",
-  "block.advancedperipherals.me_bridge": "ME Bridge",
-  "block.advancedperipherals.rs_bridge": "RS Bridge",
-  "block.advancedperipherals.energy_detector": "Energy Detector",
-  "block.advancedperipherals.peripheral_casing": "Peripheral Casing",
-  "block.advancedperipherals.inventory_manager": "Inventory Manager",
-  "block.advancedperipherals.redstone_integrator": "Redstone Integrator",
-  "block.advancedperipherals.block_reader": "Block Reader",
-  "block.advancedperipherals.geo_scanner": "Geo Scanner",
-  "block.advancedperipherals.nbt_storage": "NBT Storage",
-  "block.advancedperipherals.colony_integrator": "Colony Integrator",
-  "turtle.advancedperipherals.chatty_turtle": "Chatty",
-  "turtle.advancedperipherals.environment_turtle": "Environment",
-  "turtle.advancedperipherals.player_turtle": "Player",
-  "turtle.advancedperipherals.chunky_turtle": "Chunky",
-  "turtle.advancedperipherals.geoscanner_turtle": "Geoscanning",
-  "turtle.advancedperipherals.compass_turtle": "Compass",
-  "turtle.advancedperipherals.weak_automata": "Weak automata",
-  "turtle.advancedperipherals.overpowered_weak_automata": "Overpowered weak automata",
-  "turtle.advancedperipherals.husbandry_automata": "Husbandry automata",
-  "turtle.advancedperipherals.overpowered_husbandry_automata": "Overpowered husbandry automata",
-  "turtle.advancedperipherals.end_automata": "End automata",
-  "turtle.advancedperipherals.overpowered_end_automata": "Overpowered end automata",
-  "pocket.advancedperipherals.environment_pocket": "Environment",
-  "pocket.advancedperipherals.player_pocket": "Player",
-  "pocket.advancedperipherals.chatty_pocket": "Chatty",
-  "pocket.advancedperipherals.geoscanner_pocket": "Geoscanning",
-  "pocket.advancedperipherals.colony_pocket": "Colony",
-  "text.advancedperipherals.removed_player": "Cleared the memory card",
-  "text.advancedperipherals.added_player": "Added you to the memory card",
-  "text.advancedperipherals.automata_core_feed_by_player": "You trying to feed entity to soul, but your own body refuses to do this. Maybe something more mechanical can do this?",
-  "entity.minecraft.villager.advancedperipherals.computer_scientist": "Computer Scientist",
-  "keybind.advancedperipherals.category": "Advanced Peripherals",
-  "keybind.advancedperipherals.description": "Show Description",
-  "itemGroup.advancedperipheralstab": "Advanced Peripherals"
+  "item.advancedperipherals.tooltip.energy_detector": "§7Pode detetar o fluxo de energia e atuar como resistência."
 }
