add saddle_turtle to lang

--- a/src/main/resources/assets/advancedperipherals/lang/en_US.json
+++ b/src/main/resources/assets/advancedperipherals/lang/en_US.json
@@ -87,5 +87,6 @@
   "turtle.advancedperipherals.overpowered_husbandry_automata": "Overpowered husbandry automata",
   "turtle.advancedperipherals.overpowered_weak_automata": "Overpowered weak automata",
   "turtle.advancedperipherals.player_turtle": "Player Detector",
+  "turtle.advancedperipherals.saddle_turtle": "Tamed",
   "turtle.advancedperipherals.weak_automata": "Weak automata"
 }
